@@ -32,6 +32,7 @@ Version 1.3-svn:
      animation glitch with this hotkey; this needs to be considered for
      future hotkey changes/additions (see bug #6312)
    * when discovering friendly units, the message is now blue
+   * show leader name in statistics title (patch #604, FR #6932)
  * WML engine
    * add hide_help key to prevent some unit to be display in help menu
    * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
